@@ -6,6 +6,7 @@ Version 1.0.4
 * Fix legacy pickup triggers not working.
 * Fix lasersight always displaying with revolver and crossbow.
 * Fix incorrect string IDs for item combine, HK and revolver with lasersight.
+* Fix puzzle holes not swapping to puzzle done objects.
 
 Version 1.0.3
 =============
